@@ -26,7 +26,7 @@ rb_call_info_kw_arg_bytes(int keyword_len)
 #define ISEQ_COMPILE_DATA(iseq)      (iseq)->compile_data_
 #define ISEQ_COVERAGE(iseq)          (iseq)->variable_body->coverage_
 #define ISEQ_COVERAGE_SET(iseq, cov) RB_OBJ_WRITE((iseq), &(iseq)->variable_body->coverage_, cov)
-
+#define ISEQ_FLIP_CNT_INCREMENT(iseq) ((iseq)->variable_body->flip_cnt_++)
 RUBY_SYMBOL_EXPORT_BEGIN
 
 /* compile.c */
